[package]
authors = ["Leonid Beder <leonid@lbeder.com>"]
edition = "2021"
name = "scrypt-kdf"
version = "0.13.1"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.4.2", features = ["derive", "string"] }
color-backtrace = "0.6.0"
colored = "2.0.4"
crossterm = "0.27.0"
ctrlc = { version = "3.4.1", features = ["termination"] }
hex = "0.4.3"
humantime = "2.1.0"
mimalloc = { version = "0.1.38", default-features = false }
rpassword = "7.2.0"
scrypt = "0.11.0"
lazy_static = "1.4.0"

[dependencies.pbr]
git = "https://github.com/lbeder/pb.git"

[dev-dependencies]
rstest = "0.18.2"

[profile.release]
panic = "abort"

[profile.profile]
debug = true
inherits = "release"
