[package]
authors = ["Leonid Beder <leonid@lbeder.com>"]
edition = "2021"
name = "scrypt-kdf"
version = "0.16.0"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.1", features = ["derive", "string"] }
color-backtrace = "0.6.1"
crossterm = "0.27.0"
ctrlc = { version = "3.4.2", features = ["termination"] }
hex = "0.4.3"
humantime = "2.1.0"
mimalloc = { version = "0.1.39", default-features = false }
rpassword = "7.3.1"
scrypt = "0.11.0"
lazy_static = "1.4.0"
base64 = "0.21.7"
bs58 = "0.5.0"
pbr = "1.1.1"

[dev-dependencies]
rstest = "0.18.2"

[profile.release]
panic = "abort"

[profile.profile]
debug = true
inherits = "release"
